@@ -1,5 +1,8 @@
 2006-09-26  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/auth_recv.c(_check_auth_client_dir):
+	  Combined tests for write permissions and the sticky bit being set.
+
 	* src/etc/munge.init.in(service_restart): Replaced negated conditional
 	  with if/else since Solaris shell complains about commands starting
 	  with "!".
